[gd_scene load_steps=15 format=3 uid="uid://de8ynbju0svex"]

[ext_resource type="Script" path="res://UI/pause/pausescreen.gd" id="1_88nxu"]
[ext_resource type="FontFile" uid="uid://bv4vvvkt08xva" path="res://UI/IBMPlexMono-Light.ttf" id="2_qf0ts"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w28qb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c2ka"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yaf5j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kvkam"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ub00u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ckg7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0trp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ha3gy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k2pnd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rp873"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05xov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pwqvj"]

[node name="pause" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.784314)
script = ExtResource("1_88nxu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.5
offset_top = -42.0
offset_right = 93.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_qf0ts")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w28qb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3c2ka")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yaf5j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kvkam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ub00u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ckg7d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0trp2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ha3gy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k2pnd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rp873")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05xov")
text = "resume"

[node name="reset" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_qf0ts")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w28qb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3c2ka")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yaf5j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kvkam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ub00u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ckg7d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0trp2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ha3gy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k2pnd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rp873")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05xov")
text = "reset player"

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pwqvj")

[node name="save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_qf0ts")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w28qb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3c2ka")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yaf5j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kvkam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ub00u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ckg7d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0trp2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ha3gy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k2pnd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rp873")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05xov")
text = "save game"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("2_qf0ts")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w28qb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_3c2ka")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_yaf5j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_kvkam")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ub00u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ckg7d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0trp2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ha3gy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k2pnd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rp873")
theme_override_styles/normal = SubResource("StyleBoxEmpty_05xov")
text = "quit "

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
